@@ -1,9 +1,9 @@
-DIST man-pages-3.15.tar.bz2 1040583 RMD160 d88b1075b4268c3c7a94836746f7450f65c48dfd SHA1 449e079877b17994a22ca8380837cae8088d4627 SHA256 10f66838f9b15ba21e376b75f48a0a7de325ba38c38418a3a05f34f1e34f225f
 DIST man-pages-3.16.tar.bz2 1048770 RMD160 7d25b8426e6d8d44804ad235b407a63ace2240d4 SHA1 f9c57ab661fbbf048eb49bc42aa187c6349bcf44 SHA256 a9331f053cf4f1a9322a9acfc15a010d5904ddf1f7c681c19ad7379889b1f880
 DIST man-pages-3.17.tar.bz2 1061894 RMD160 6c189686c542aaeef78648cfd2d802168edf1834 SHA1 212dddeb08d5347bf7faff150d978f557791b957 SHA256 d59c803717f1082a58084d8ce510b045b540b2a8ddc953ae3e65d0652d932e54
+DIST man-pages-3.18.tar.bz2 1072330 RMD160 cbf255befcf9ad4c1e5537a82b2df0dc70331902 SHA1 48ec03017f9eb8fa889585eb679c69874054f384 SHA256 7be08777fae2c873106f6d3ae09678444e635112ad9c52f9e9200439710dd8de
 DIST man-pages-gentoo-2.tar.bz2 5141 RMD160 0d394dbc1a9c825c6612c96aad1433ab5d02aa6f SHA1 f0959fce5c6a32ddb776806fd59fe3f157686a69 SHA256 b7d9423c2069e587deb7671273d4a1ffed7d31b9f95a689b128a759d636762f0
-EBUILD man-pages-3.15.ebuild 1843 RMD160 a9773ee0881a3ddaf46ea3f66b3c10a897a5c48b SHA1 f16c9be7f2a2e195cbc803d308e7eb8cd38f2235 SHA256 9e343b137a4701620c5f66c34ded157a325e201789ea745d54a5883ea07d3b4e
 EBUILD man-pages-3.16.ebuild 1843 RMD160 f4f892adfa46e1d36f0253b849ed111777004f78 SHA1 1dab3cde0793898b9ff739bc61555ba14d96d8f0 SHA256 fa08794ddd3d5f7d1defb115da34f1c0d60e70de18910286e8dc9b6676401275
-EBUILD man-pages-3.17.ebuild 1822 RMD160 e346497de0c3eead9848702c4c020f3c6a53ad0b SHA1 0ad4f5a9dcb5e96343a850b7a8170348e7b1b352 SHA256 71c377d5f67dabfebd13e102dfc97a0cdc2362e41f8586f37cee53200dd0ddaa
-MISC ChangeLog 17155 RMD160 3bcc7350d3b5e2884da4f964ee1eddcb24598a98 SHA1 dd95fbf8d18abfbad950233ed16ff6c7503f8eb1 SHA256 014948e49ab6fc51dc762de4b21d5cda4387fa646e1beacc46d085582e7f6a71
+EBUILD man-pages-3.17.ebuild 1822 RMD160 ea61fe7aad1235f7394d770703c592433a2520e4 SHA1 92a78a3c682ab82412db6bf494e4a8c2f4d4f93d SHA256 aea3f7a9107366771bd8ce35ccf48ba5d9ef228ffb44c5c088f4cb32cad2e679
+EBUILD man-pages-3.18.ebuild 1822 RMD160 9111b6d0a23242ef15518491a997a1905205dd09 SHA1 d76326449f942e34735d5c0d7cc4a03898b47fdf SHA256 8033331ee9aa2467d7732dba2d477dcd85bf08a0c3fd20d06a3a16bb691e91fd
+MISC ChangeLog 17277 RMD160 55693ce64d6c95e951bc4d307ceafb880cbc1612 SHA1 921120421931299dab0e020ed6330ccd8dff5944 SHA256 5b9041e69f41ade02ddc945eaa3c1e0317f74bd86210e855fa73b4092feb7472
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
